// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Communicator tests default renderer 1`] = `
<div
  className="CommunicatorToolbar"
>
  <ForwardRef(WithStyles(ForwardRef(Button)))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <UNDEFINED />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </ForwardRef(WithStyles(ForwardRef(Button)))>
  <ForwardRef(WithStyles(ForwardRef(Menu)))
    anchorEl={null}
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(WithStyles(ForwardRef(ListItem)))
      className="CommunicatorToolbar__menuitem"
      onClick={[Function]}
    >
      <ForwardRef(WithStyles(ForwardRef(ListItemAvatar)))>
        <ForwardRef(WithStyles(ForwardRef(Avatar)))>
          <UNDEFINED />
        </ForwardRef(WithStyles(ForwardRef(Avatar)))>
      </ForwardRef(WithStyles(ForwardRef(ListItemAvatar)))>
      <ForwardRef(WithStyles(ForwardRef(ListItemText)))
        inset={true}
        primary="board-1-name-key"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </ForwardRef(WithStyles(ForwardRef(ListItem)))>
    <ForwardRef(WithStyles(ForwardRef(ListItem)))
      className="CommunicatorToolbar__menuitem"
      onClick={[Function]}
    >
      <ForwardRef(WithStyles(ForwardRef(ListItemAvatar)))>
        <ForwardRef(WithStyles(ForwardRef(Avatar)))>
          <UNDEFINED />
        </ForwardRef(WithStyles(ForwardRef(Avatar)))>
      </ForwardRef(WithStyles(ForwardRef(ListItemAvatar)))>
      <ForwardRef(WithStyles(ForwardRef(ListItemText)))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </ForwardRef(WithStyles(ForwardRef(ListItem)))>
  </ForwardRef(WithStyles(ForwardRef(Menu)))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles(ForwardRef(TextField)))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <ForwardRef(WithStyles(ForwardRef(Button)))
      className="edit__communicator"
      disabled={false}
      onClick={[Function]}
    >
      <UNDEFINED
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </ForwardRef(WithStyles(ForwardRef(Button)))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests menu behavior 1`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ArrowDropDownIcon)) />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1-name-key"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      className="edit__communicator"
      disabled={false}
      onClick={[Function]}
    >
      <Memo(ForwardRef(LayersIcon))
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests menu behavior 2`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ArrowDropDownIcon)) />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl="someElement"
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1-name-key"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      className="edit__communicator"
      disabled={false}
      onClick={[Function]}
    >
      <Memo(ForwardRef(LayersIcon))
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests switching boards behavior 1`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ArrowDropDownIcon)) />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1-name-key"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      className="edit__communicator"
      disabled={false}
      onClick={[Function]}
    >
      <Memo(ForwardRef(LayersIcon))
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests switching boards behavior 2`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ArrowDropDownIcon)) />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl="someElement"
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1-name-key"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <Memo(ForwardRef(ViewModuleIcon)) />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      className="edit__communicator"
      disabled={false}
      onClick={[Function]}
    >
      <Memo(ForwardRef(LayersIcon))
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;
